# djangoRLS

./: .gitignore  README.md  setup.cfg
djangoRLS/: __init__.py  apps.py
djangoRLS/admin/: RLSManagedModelAdmin.py  __init__.py  filters.py  options.py  restrictions.py
djangoRLS/admin/models/: RLSPermission.py  __init__.py
djangoRLS/migrations/: 0001_initial.py  0002_rlspermission_permit_all_and_more.py
djangoRLS/models/: RLSPermission.py  __init__.py
djangoRLS/src/patch/: __init__.py  custom_options.py
sample_project/sample_project/: settings.py
sample_project/sample_project/apps/polls/: LICENSE  admin.py  apps.py  models.py
sample_project/sample_project/apps/polls/migrations/: 0002_alter_choice_question.py  0003_auto_20210927_0859.py
sample_project/sample_project/apps/polls/templates/polls/: detail.html  index.html  results.html
