[metadata]
name                            =   djangoRLS
version                         =   0.1.2
description                     =   Django app which handles Record Level Security for django admin.
long_description                =   file: README.md
long_description_content_type   =   text/markdown
url                             =   https://github.com/omelched/djangoRLS
author                          =   Denis Omelchenko
author_email                    =   omelched@gmail.com
classifiers                     =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Natural Language :: English
    Natural Language :: Russian
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Database
    Topic :: Internet
    Topic :: Internet :: WWW/HTTP
    Topic :: Utilities
project_urls                    =
    Bug Tracker                 =   https://github.com/omelched/djangoRLS/issues
    Changelog                   =   https://github.com/omelched/djangoRLS/releases

[options]
packages                        =   find:
include_package_data            =   True
install_requires                =
    django>=3.2.8
    django-autocomplete-light>=3.9.4
    django-querysetsequence>=0.15
python_requires                 =   >=3.8

[options.package_data]
* = *.css, *.js, *.html, *.po